--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2010. Сергей Лежнев
+  -->
+
 <resources>
     <string name="hello">Hello World, Lop!</string>
     <string name="app_name"></string>
